# agentic-tdd

./: .gitignore  AGENTS.md  PROJECT.md  README.md  pyproject.toml  setup.py  test_kata.md
agentic_tdd/: __main__.py  core.py  implementer_agent.py  llm.py  refactorer_agent.py  supervisor_agent.py  tester_agent.py  utils.py
src/tdd_agents/: __init__.py  cli.py  config.py  implementer.py  refactorer.py  supervisor.py  tester.py  workflow.py
tests/: __init__.py  test_cli.py  test_config.py  test_implementer.py  test_kata.md  test_next.py  test_refactorer.py  test_supervisor.py  test_tester.py  test_workflow.py
